--- a/src/qt/bitcoinpay.qrc
+++ b/src/qt/bitcoinpay.qrc
@@ -7,6 +7,7 @@
         <file alias="connect_0">res/icons/connect0_16.png</file>
         <file alias="connect_1">res/icons/connect1_16.png</file>
         <file alias="connect_2">res/icons/connect2_16.png</file>
+         <file alias="explorer">res/icons/explorer.png</file>
         <file alias="connect_3">res/icons/connect3_16.png</file>
         <file alias="connect_4">res/icons/connect4_16.png</file>
         <file alias="transaction_0">res/icons/transaction0.png</file>
